fix(etapa_5): fix broken styles in logbook page

--- a/etapa_5/css/base.css
+++ b/etapa_5/css/base.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Roboto', sans-serif;
   background-color: #342;
   color: #eee;
   line-height: 1.6;
